--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "nuxt-rfg-icon": "^0.6.4",
-    "three": "^0.134.0"
+    "three": "^0.134.0",
+    "vue-agile": "^2.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/svg": "^0.3.0",
     "@nuxtjs/tailwindcss": "^4.2.0",
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "eslint": "^7.29.0",
