--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/svg": "^0.3.0",
-    "@nuxtjs/tailwindcss": "^4.2.0",
     "@tailwindcss/aspect-ratio": "^0.3.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "nuxt-animejs": "^1.2.2",
-    "postcss": "^8.3.5"
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.23"
   }
 }
