--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-vue": "^7.12.1",
     "nuxt-animejs": "^1.2.2",
     "postcss": "^8.4.6",
+    "postcss-pxtorem": "^6.0.0",
     "tailwindcss": "^3.0.23"
   }
 }
