--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
+    "lodash": "^4.17.21",
     "nuxt-animejs": "^1.2.2",
     "postcss": "^8.4.6",
     "postcss-pxtorem": "^6.0.0",
