--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@lottiefiles/vue-lottie-player": "^1.0.5",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
+    "hammerjs": "^2.0.8",
     "nuxt": "^2.15.7",
     "nuxt-rfg-icon": "^0.6.4",
     "three": "^0.134.0",
